@@ -1,0 +1,3 @@
+ismdi <- function(){
+    return(mdi = as.logical(.C("ismodemdi", as.integer(0), PACKAGE = "Rcmdr")[[1]]))
+}
